Added auth token creation based on azure app service auth

--- a/Source/Solution/CogentCms.WebAdmin/CogentCms.WebAdmin.csproj
+++ b/Source/Solution/CogentCms.WebAdmin/CogentCms.WebAdmin.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CogentCms.Core\CogentCms.Core.csproj" />
+  </ItemGroup>
+
 </Project>
