Split out shared web components, updated DI config.

--- a/Source/Solution/CogentCms.Web/CogentCms.Web.csproj
+++ b/Source/Solution/CogentCms.Web/CogentCms.Web.csproj
@@ -1,16 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CogentCms.Core\CogentCms.Core.csproj" />
-    <ProjectReference Include="..\CogentCms.Web\CogentCms.Web.csproj" />
   </ItemGroup>
 
 </Project>
